Fix misaligned hero newspaper on wide screens

--- a/css/hero.css
+++ b/css/hero.css
@@ -17,7 +17,6 @@
 }
 
 .newspaper {
-  max-width: 1600px;
   margin: 0 16rem;
   background-image: url('/img/paper.jpg');
   background-size: cover;
